Corrected build file, added cobertura
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@181 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/Spring/build-dist.properties
+++ b/OpenWMS-common/branches/Spring/build-dist.properties
@@ -4,20 +4,52 @@
 # Distributable under LGPL license.
 # See terms of license at gnu.org.
 #
-project.dir = .
-war.file 			= openwms.war
-web.xml.file 		= web.xml
-application.file	= application.xml
+project.dir=.
 
-dir = ${project.dir}
-src.dir = ${dir}/src
-testsrc.dir = ${dir}/test
-spring.dir = ${workspace.dir}/spring
-lib.dir = ${dir}/lib
-log.dir = ${dir}/log
-res.dir = ${dir}/res
-src.build.dir = ${dir}/build/ant/src
-testsrc.build.dir = ${dir}/build/ant/test
-dist.dir = ${dir}/dist
-meta-inf.dir = ${src.dir}/META-INF
+openwms_common.dist.dir=../OpenWMS-common/dist
+
+ant.dir=${build.dir}/ant
+#ant.log.dir=${ant.dir}/log
+
+build.dir=${project.dir}/build
+build.main.dir=${ant.dir}/main
+build.test.dir=${ant.dir}/test
+
+cobertura.instrumented.dir=${build.dir}/cobertura
+cobertura.reports.dir=${reports.dir}/cobertura
+cobertura.reports.coveragereport.dir=${reports.dir}/testcoverage
+
+deps.dir=${project.dir}/deps
+deps.test.dir=${deps.dir}/test
+deps.build.dir=${deps.dir}/build
+
+dist.dir=${project.dir}/dist
+
+docs.dir=${project.dir}/docs
+
+etc.dir=${project.dir}/etc
+
+flex.build.dir=${build.dir}/flex/build
+flex.src.dir=client/flex/as3
+
+ivy.dep.file=${etc.dir}/ivy.xml
+ivy.settings.file=${etc.dir}/ivysettings.xml
+
+jar.file=${ant.project.name}.jar
+
+junit.reports.dir=${reports.dir}/unittest
+junit.reports.html.dir=${junit.reports.dir}/html
+junit.reports.xml.dir=${junit.reports.dir}/xml
+
+reports.dir=${docs.dir}/reports
+
+src.dir=${project.dir}/src
+src.meta-inf.dir=${src.dir}/META-INF
+
+testsrc.dir=${project.dir}/test
+
+spring.dir=${workspace.dir}/spring
+
+lib.dir=${project.dir}/lib
+
 
