Renamed prop file
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@183 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/Spring/build.xml
+++ b/OpenWMS-common/branches/Spring/build.xml
@@ -11,7 +11,7 @@
     </tstamp>
 
     <property environment="env" />
-    <property file="build-dist.properties" />
+    <property file="build.properties" />
     <path id="class.path">
         <fileset dir="${openwms_common.dist.dir}">
             <include name="*.jar" />
