Removed services, added ivy support
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@187 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/build.properties
+++ b/OpenWMS-common/trunk/build.properties
@@ -19,6 +19,7 @@ build.test.dir=${ant.dir}/test
 cobertura.instrumented.dir=${build.dir}/cobertura
 cobertura.reports.dir=${reports.dir}/cobertura
 cobertura.reports.coveragereport.dir=${reports.dir}/testcoverage
+cobertura.ser.file=${java.io.tmpdir}/cobertura.ser
 
 deps.dir=${project.dir}/deps
 deps.test.dir=${deps.dir}/test
@@ -37,6 +38,8 @@ ivy.dep.file=${etc.dir}/ivy.xml
 ivy.settings.file=${etc.dir}/ivysettings.xml
 
 jar.file=${ant.project.name}.jar
+osgi-jar.file=${ant.project.name}-osgi.jar
+osgi.export-package=org.openwms.common;version="1.0.0"
 
 junit.reports.dir=${reports.dir}/unittest
 junit.reports.html.dir=${junit.reports.dir}/html
