Added tests, modified build file
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@189 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/Spring/build.properties
+++ b/OpenWMS-common/branches/Spring/build.properties
@@ -5,8 +5,10 @@
 # See terms of license at gnu.org.
 #
 project.dir=.
+project.version=1.0.0
 
-openwms_common.dist.dir=../OpenWMS-common/dist
+openwms_common.dist.dir=${env.OPENWMS_COMMON}/dist
+openwms_services.dist.dir=${env.OPENWMS_SERVICESAPI}/dist
 
 ant.dir=${build.dir}/ant
 #ant.log.dir=${ant.dir}/log
@@ -18,6 +20,7 @@ build.test.dir=${ant.dir}/test
 cobertura.instrumented.dir=${build.dir}/cobertura
 cobertura.reports.dir=${reports.dir}/cobertura
 cobertura.reports.coveragereport.dir=${reports.dir}/testcoverage
+cobertura.ser.file=${java.io.tmpdir}/cobertura.ser
 
 deps.dir=${project.dir}/deps
 deps.test.dir=${deps.dir}/test
@@ -36,6 +39,8 @@ ivy.dep.file=${etc.dir}/ivy.xml
 ivy.settings.file=${etc.dir}/ivysettings.xml
 
 jar.file=${ant.project.name}.jar
+osgi-jar.file=${ant.project.name}-osgi.jar
+osgi.export-package=org.openwms.common.service.impl;version="1.0.0"
 
 junit.reports.dir=${reports.dir}/unittest
 junit.reports.html.dir=${junit.reports.dir}/html
@@ -45,6 +50,7 @@ reports.dir=${docs.dir}/reports
 
 src.dir=${project.dir}/src
 src.meta-inf.dir=${src.dir}/META-INF
+src.log4j.file=${src.dir}/log4j.xml
 
 testsrc.dir=${project.dir}/test
 
