--- a/OpenWMS-common/trunk/.classpath
+++ b/OpenWMS-common/trunk/.classpath
@@ -8,18 +8,17 @@
 	<classpathentry kind="lib" path="deps/build/persistence-api-1.0.jar"/>
 	<classpathentry kind="lib" path="deps/test/hsqldb-1.8.0.7.jar"/>
 	<classpathentry kind="lib" path="deps/test/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="deps/test/hibernate-3.2.6.ga.jar"/>
-	<classpathentry kind="lib" path="deps/test/hibernate-commons-annotations-3.3.0.ga.jar"/>
-	<classpathentry kind="lib" path="deps/test/hibernate-entitymanager-3.3.2.GA.jar"/>
-	<classpathentry kind="lib" path="deps/test/hibernate-tools-3.2.0.ga.jar"/>
-	<classpathentry kind="lib" path="deps/test/hibernate-validator-3.0.0.ga.jar"/>
-	<classpathentry kind="lib" path="deps/test/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="deps/test/cglib-2.1_3.jar"/>
+	<classpathentry kind="lib" path="deps/test/hibernate-core-3.3.1.GA.jar"/>
+	<classpathentry kind="lib" path="deps/test/hibernate-entitymanager-3.4.0.GA.jar"/>
 	<classpathentry kind="lib" path="deps/test/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="deps/test/hibernate-annotations-3.4.0.GA.jar"/>
+	<classpathentry kind="lib" path="deps/test/hibernate-commons-annotations-3.3.0.ga.jar"/>
+	<classpathentry kind="lib" path="deps/test/slf4j-api-1.5.6.jar"/>
 	<classpathentry kind="lib" path="deps/test/javassist-3.6.0.GA.jar"/>
-	<classpathentry kind="lib" path="deps/test/jboss-common-core-2.2.0.GA.jar"/>
+	<classpathentry kind="lib" path="deps/test/slf4j-simple-1.5.6.jar"/>
+	<classpathentry kind="lib" path="deps/build/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="deps/test/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="deps/test/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="deps/test/hibernate-annotations-3.3.0.ga.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-6-sun-1.6.0.10"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
